// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink component matches snapshot 1`] = `
<Link
  className="ButtonLink"
  replace={false}
  to="/test-route"
>
  <Button />
</Link>
`;

exports[`ButtonLink component with custom class matches snapshot 1`] = `
<Link
  className="ButtonLink custom_class"
  replace={false}
  to="/test-route"
>
  <Button />
</Link>
`;
